# felix-bause-dev

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: dockerize.yml
config/: default.yaml  development.yaml
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
frontend/: config-localhost.toml  config.toml  package.json
frontend/content/auth/: _index.md
frontend/content/blog/: md-syntax.md
frontend/content/cv/: _index.md
frontend/sass/: style.scss
frontend/sass/themes/: _dark.scss  _light.scss
frontend/static/: example.html  webfonts
frontend/static/js/: theme-switcher.js
frontend/templates/: 404.html  auth.html  base.html  blog-page.html  cv.html  index.html
frontend/templates/macros/: social.html
src/: main.rs
src/config/: mod.rs
