[package]
name = "felix-bause-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "felix-bause-dev"
path = "src/main.rs"

[dependencies]
axum = "0.6.11"
#jwt-authorizer = { path  = "../jwt-authorizer/jwt-authorizer"}
jwt-authorizer = { git = "https://github.com/like-a-bause/jwt-authorizer.git", branch = "feat-cookie-as-jwt-source" }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tower-cookies = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.156"
config = "0.13.3"
